--- a/packages/calcite-components/src/components/action-menu/action-menu.scss
+++ b/packages/calcite-components/src/components/action-menu/action-menu.scss
@@ -1,3 +1,12 @@
+/**
+ * CSS Custom Properties
+ *
+ * These properties can be overridden using the component's tag as selector.
+ *
+ * @prop --calcite-action-menu-items-space: Specifies the space between actions in the menu.
+ *
+ */
+
 :host {
   @apply text-1
   box-border
@@ -24,12 +33,14 @@
 }
 
 .menu {
-  @apply flex-col
+  @apply flex
+  flex-col
   flex-nowrap
   outline-none
   overflow-y-auto
   overflow-x-hidden
   max-h-menu;
+  gap: var(--calcite-action-menu-items-space, 0);
 }
 
 @include base-component();
